@@ -1,3 +1,10 @@
+2007-04-25  Ali Afshar <aafshar@gmail.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py (ObjectList.grab_focus): 
+	Add, fixes #3326
+
 2007-04-20  Johan Dahlin  <jdahlin@async.com.br>
 
 	* examples/search.py: Add an example.
